fix: 完善管理端审核、机构注册与前端体验优化
修复商品审核 PATCH 的 CORS 问题，企业注册改为待审核；管理员可浏览商城与学习资源；统一表格排版；投递简历支持选择简历版本；美化机构详情与商城等页面。

Co-authored-by: Cursor <cursoragent@cursor.com>